--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- Favicon -->
+      <link rel="icon" href="/michelleburton.ico" type="image/x-icon" />
     <title>equity-intelligence-dashboard</title>
   </head>
   <body>
