--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Equity Intelligence Dashboard — an AI-assisted market snapshot engine that captures live stock data, computes structured deltas, and generates narrative intelligence from price momentum and fundamentals." />
+    <meta property="og:image" content="https://equity-intelligence-dashboard.onrender.com/images/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
       <!-- Favicon -->
       <link rel="icon" href="/michelleburton.ico" type="image/x-icon" />
     <title>equity-intelligence-dashboard</title>
