--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta property="og:image" content="https://equity-intelligence-dashboard.onrender.com/images/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-      <!-- Favicon -->
-      <link rel="icon" href="/michelleburton.ico" type="image/x-icon" />
-    <title>equity-intelligence-dashboard</title>
+    <!-- Favicon -->
+    <link rel="icon" href="/michelleburton.ico" type="image/x-icon" />
+    <title>Equity Intelligence Dashboard — AI-assisted market snapshot engine</title>
   </head>
   <body>
     <div id="root"></div>
